--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -46,7 +46,7 @@
     author = "Ryskina, Maria  and
       Rabinovich, Ella  and
       Berg-Kirkpatrick, Taylor  and
-      Mortensen, David  and
+      Mortensen, David R. and
       Tsvetkov, Yulia",
     booktitle = "Proceedings of the Society for Computation in Linguistics",
     month = jan,
