--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,7 +38,7 @@
 
 @inproceedings{ryskina-etal-2020-phonetic,
     abbr={ACL},
-    title = "Phonetic and Visual Priors for Decipherment of Informal {R}omanization",
+    title = "Phonetic and Visual Priors for Decipherment of Informal Romanization",
     author = "Ryskina, Maria  and
       Gormley, Matthew R.  and
       Berg-Kirkpatrick, Taylor",
