More fixes after rebase

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -55,6 +55,7 @@
     slides={ryskina2020phonetic_slides.pdf},
     code={https://github.com/ryskina/romanization-decipherment},
     talk={https://slideslive.com/38929400/phonetic-and-visual-priors-for-decipherment-of-informal-romanization},
+    selected={true}
 }
 
 @inproceedings{ryskina-etal-2020-new,
@@ -76,6 +77,7 @@
     arxiv={2001.07740},
     poster={ryskina2020where_poster.pdf},
     code={https://github.com/ryskina/neology},
+    selected={true}
 }
 
 @inproceedings{opera,
@@ -108,5 +110,6 @@ hypothesis creation and reasoning to answer questions.",
     pages = "411--416",
     abstract = "Compositor attribution, the clustering of pages in a historical printed document by the individual who set the type, is a bibliographic task that relies on analysis of orthographic variation and inspection of visual details of the printed page. In this paper, we introduce a novel unsupervised model that jointly describes the textual and visual features needed to distinguish compositors. Applied to images of Shakespeare{'}s First Folio, our model predicts attributions that agree with the manual judgements of bibliographers with an accuracy of 87{\%}, even on text that is the output of OCR.",
     arxiv={1704.07875},
-    poster={https://www.aclweb.org/anthology/attachments/P17-2065.Poster.pdf}
+    poster={https://www.aclweb.org/anthology/attachments/P17-2065.Poster.pdf},
+    selected={true}
 }
