Added multiple first authors and et al. for long author lists

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -83,7 +83,25 @@
 @inproceedings{opera,
   abbr={TAC},
   title={OPERA: Operations-oriented Probabilistic Extraction, Reasoning, and Analysis},
-  author={Hovy, Eduard and others},
+  author={Hovy, Eduard and 
+    Carbonell, Jaime and 
+    Chalupsky, Hans and
+    Gershman, Anatole and 
+    Hauptmann, Alex and 
+    Metze, Florian and 
+    Mitamura, Teruko and 
+    Sheikh, Zaid and 
+    Dangi, Ankit and 
+    Chaudhary, Aditi and
+    Chen, Xianyang and 
+    Kong, Xiang and 
+    Huang, Bernie and 
+    Medina, Salvador and 
+    Liu, Hector and 
+    Ma, Xuezhe and 
+    Ryskina, Maria and 
+    Sanabria, Ramon and
+    Gangal, Varun},
   booktitle={Proceedings of the Text Analysis Conference},
   year={2019},
   abstract = "The OPERA system of CMU and USC/ISI performs end-to-end information
