--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,23 @@
     abstract = "Traditionally, character-level transduction problems have been solved with finite-state models designed to encode structural and linguistic knowledge of the underlying process, whereas recent approaches rely on the power and flexibility of sequence-to-sequence models with attention. Focusing on the less explored unsupervised learning scenario, we compare the two model classes side by side and find that they tend to make different types of errors even when achieving comparable performance. We analyze the distributions of different error classes using two unsupervised tasks as testbeds: converting informally romanized text into the native script of its language (for Russian, Arabic, and Kannada) and translating between a pair of closely related languages (Serbian and Bosnian). Finally, we investigate how combining finite-state and sequence-to-sequence models at decoding time affects the output quantitatively and qualitatively.",
     arxiv = "2106.12698",
     slides={ryskina2021comparative_slides.pdf},
-    talk={https://youtu.be/ijwOF0fpqMs}
+    talk={https://youtu.be/ijwOF0fpqMs},
+    bibtex_show={true},
+    bibtex={@inproceedings\{ryskina-etal-2021-comparative,
+    title = "Comparative Error Analysis in Neural and Finite-state Models for Unsupervised Character-level Transduction",
+    author = "Ryskina, Maria  and
+      Hovy, Eduard  and
+      Berg-Kirkpatrick, Taylor  and
+      Gormley, Matthew R.",
+    booktitle = "Proceedings of the 18th SIGMORPHON Workshop on Computational Research in Phonetics, Phonology, and Morphology",
+    month = aug,
+    year = "2021",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2021.sigmorphon-1.22",
+    doi = "10.18653/v1/2021.sigmorphon-1.22",
+    pages = "198--211",
+\}},
 }
 
 @inproceedings{ravichander-etal-2021-noiseqa,
@@ -34,6 +50,23 @@
     abstract = "When Question-Answering (QA) systems are deployed in the real world, users query them through a variety of interfaces, such as speaking to voice assistants, typing questions into a search engine, or even translating questions to languages supported by the QA system. While there has been significant community attention devoted to identifying correct answers in passages assuming a perfectly formed question, we show that components in the pipeline that precede an answering engine can introduce varied and considerable sources of error, and performance can degrade substantially based on these upstream noise sources even for powerful pre-trained QA models. We conclude that there is substantial room for progress before QA systems can be effectively deployed, highlight the need for QA evaluation to expand to consider real-world use, and hope that our findings will spur greater community interest in the issues that arise when our systems actually need to be of utility to humans.",
     arxiv = "2102.08345",
     website={https://noiseqa.github.io/},
+    bibtex_show={true},
+    bibtex={@inproceedings\{ravichander-etal-2021-noiseqa,
+    title = "\{N\}oise\{QA\}: Challenge Set Evaluation for User-Centric Question Answering",
+    author = "Ravichander, Abhilasha  and
+      Dalmia, Siddharth  and
+      Ryskina, Maria  and
+      Metze, Florian  and
+      Hovy, Eduard  and
+      Black, Alan W",
+    booktitle = "Proceedings of the 16th Conference of the European Chapter of the Association for Computational Linguistics: Main Volume",
+    month = apr,
+    year = "2021",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2021.eacl-main.259",
+    pages = "2976--2992",
+\}},
 }
 
 @inproceedings{ryskina-etal-2020-phonetic,
@@ -55,7 +88,22 @@
     slides={ryskina2020phonetic_slides.pdf},
     code={https://github.com/ryskina/romanization-decipherment},
     talk={https://slideslive.com/38929400/phonetic-and-visual-priors-for-decipherment-of-informal-romanization},
-    selected={true}
+    selected={true},
+    bibtex_show={true},
+    bibtex={@inproceedings\{ryskina-etal-2020-phonetic,
+    title = "Phonetic and Visual Priors for Decipherment of Informal {R}omanization",
+    author = "Ryskina, Maria  and
+      Gormley, Matthew R.  and
+      Berg-Kirkpatrick, Taylor",
+    booktitle = "Proceedings of the 58th Annual Meeting of the Association for Computational Linguistics",
+    month = jul,
+    year = "2020",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2020.acl-main.737",
+    doi = "10.18653/v1/2020.acl-main.737",
+    pages = "8308--8319",
+\}}
 }
 
 @inproceedings{ryskina-etal-2020-new,
@@ -69,15 +117,29 @@
     booktitle = "Proceedings of the Society for Computation in Linguistics",
     month = jan,
     year = "2020",
-    address = "New York, New York",
-    publisher = "Association for Computational Linguistics",
-    url = "https://www.aclweb.org/anthology/2020.scil-1.43",
-    pages = "367--376",
     abstract = "We perform statistical analysis of the phenomenon of neology, the process by which new words emerge in a language, using large diachronic corpora of English. We investigate the importance of two factors, semantic sparsity and frequency growth rates of semantic neighbors, formalized in the distributional semantics paradigm. We show that both factors are predictive of word emergence although we find more support for the latter hypothesis. Besides presenting a new linguistic application of distributional semantics, this study tackles the linguistic question of the role of language-internal factors (in our case, sparsity) in language change motivated by language-external factors (reflected in frequency growth).",
     arxiv={2001.07740},
     poster={ryskina2020where_poster.pdf},
     code={https://github.com/ryskina/neology},
-    selected={true}
+    selected={true},
+    bibtex_show={true},
+    bibtex={@inproceedings\{ryskina-etal-2020-new,
+    title = "Where New Words Are Born: Distributional Semantic Analysis of Neologisms and Their Semantic Neighborhoods",
+    author = "Ryskina, Maria  and
+      Rabinovich, Ella  and
+      Berg-Kirkpatrick, Taylor  and
+      Mortensen, David  and
+      Tsvetkov, Yulia",
+    booktitle = "Proceedings of the Society for Computation in Linguistics",
+    volume = "3",
+    number = "1",
+    month = jan,
+    year = "2020",
+    address = "New Orleans, Louisiana",
+    url = "https://scholarworks.umass.edu/scil/vol3/iss1/6/",
+    doi = "10.7275/1jra-8m83",
+    pages = "43--52",
+\}}
 }
 
 @inproceedings{opera,
@@ -121,13 +183,24 @@ hypothesis creation and reasoning to answer questions.",
     booktitle = "Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics",
     month = jul,
     year = "2017",
-    address = "Vancouver, Canada",
-    publisher = "Association for Computational Linguistics",
-    url = "https://www.aclweb.org/anthology/P17-2065",
-    doi = "10.18653/v1/P17-2065",
-    pages = "411--416",
     abstract = "Compositor attribution, the clustering of pages in a historical printed document by the individual who set the type, is a bibliographic task that relies on analysis of orthographic variation and inspection of visual details of the printed page. In this paper, we introduce a novel unsupervised model that jointly describes the textual and visual features needed to distinguish compositors. Applied to images of Shakespeare{'}s First Folio, our model predicts attributions that agree with the manual judgements of bibliographers with an accuracy of 87{\%}, even on text that is the output of OCR.",
     arxiv={1704.07875},
     poster={https://www.aclweb.org/anthology/attachments/P17-2065.Poster.pdf},
-    selected={true}
+    selected={true},
+    bibtex_show={true},
+    bibtex={@inproceedings\{ryskina-etal-2017-automatic,
+    title = "Automatic Compositor Attribution in the \{F\}irst \{F\}olio of \{S\}hakespeare",
+    author = "Ryskina, Maria  and
+      Alpert-Abrams, Hannah  and
+      Garrette, Dan  and
+      Berg-Kirkpatrick, Taylor",
+    booktitle = "Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics (Volume 2: Short Papers)",
+    month = jul,
+    year = "2017",
+    address = "Vancouver, Canada",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/P17-2065",
+    doi = "10.18653/v1/P17-2065",
+    pages = "411--416",
+\}}
 }
