--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+@inproceedings{ryskina-knight-2021-learning,
+    abbr={BlackboxNLP},
+    title = "Learning Mathematical Properties of Integers",
+    author = "Ryskina, Maria and
+            Knight, Kevin",
+    booktitle = "Proceedings of the Fourth BlackboxNLP Workshop on Analyzing and Interpreting Neural Networks for NLP",
+    month = nov,
+    year = "2021",
+    abstract = "Embedding words in high-dimensional vector spaces has proven valuable in many natural language applications. In this work, we investigate whether similarly-trained embeddings of integers can capture concepts that are useful for mathematical applications. We probe the integer embeddings for mathematical knowledge, apply them to a set of numerical reasoning tasks, and show that by learning the representations from mathematical sequence data, we can substantially improve over number embeddings learned from English text corpora.",
+    arxiv = "2109.07230",
+}
+
 @inproceedings{ryskina-etal-2021-comparative,
     abbr={SIGMORPHON},
     title = "Comparative Error Analysis in Neural and Finite-state Models for Unsupervised Character-level Transduction",
