--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,6 +22,7 @@
     abstract = "Embedding words in high-dimensional vector spaces has proven valuable in many natural language applications. In this work, we investigate whether similarly-trained embeddings of integers can capture concepts that are useful for mathematical applications. We probe the integer embeddings for mathematical knowledge, apply them to a set of numerical reasoning tasks, and show that by learning the representations from mathematical sequence data, we can substantially improve over number embeddings learned from English text corpora.",
     arxiv = "2109.07230",
     selected={true},
+    data = "https://github.com/ryskina/integer-embedding-tests"
 }
 
 @inproceedings{pimentel-ryskina-etal-2021-sigmorphon,
@@ -89,7 +90,7 @@
   month = aug,
   year = "2021",
   pdf = "https://aclanthology.org/2021.sigmorphon-1.25.pdf",
-  website = "https://github.com/sigmorphon/2021Task0",
+  code_and_data = "https://github.com/sigmorphon/2021Task0",
   abstract = "This year's iteration of the SIGMORPHON Shared Task on morphological reinflection focuses on typological diversity and cross-lingual variation of morphosyntactic features. In terms of the task, we enrich UniMorph with new data for 32 languages from 13 language families, with most of them being under-resourced: Kunwinjku, Classical Syriac, Arabic (Modern Standard, Egyptian, Gulf), Hebrew, Amharic, Aymara, Magahi, Braj, Kurdish (Central, Northern, Southern), Polish, Karelian, Livvi, Ludic, Veps, V{\~o}ro, Evenki, Xibe, Tuvan, Sakha, Turkish, Indonesian, Kodi, Seneca, Ash{\'a}ninka, Yanesha, Chukchi, Itelmen, Eibela. We evaluate six systems on the new data and conduct an extensive error analysis of the systems' predictions. Transformer-based models generally demonstrate superior performance on the majority of languages, achieving >90{\%} accuracy on 65{\%} of them. The languages on which systems yielded low accuracy are mainly under-resourced, with a limited amount of data. Most errors made by the systems are due to allomorphy, honorificity, and form variation. In addition, we observe that systems especially struggle to inflect multiword lemmas. The systems also produce misspelled forms or end up in repetitive loops (e.g., RNN-based models). Finally, we report a large drop in systems' performance on previously unseen lemmas.",
   equal_contribution=2,
   bibtex_show={true},
@@ -249,7 +250,7 @@
   abstract = "Informal romanization is an idiosyncratic process used by humans in informal digital communication to encode non-Latin script languages into Latin character sets found on common keyboards. Character substitution choices differ between users but have been shown to be governed by the same main principles observed across a variety of languages{---}namely, character pairs are often associated through phonetic or visual similarity. We propose a noisy-channel WFST cascade model for deciphering the original non-Latin script from observed romanized text in an unsupervised fashion. We train our model directly on romanized data from two languages: Egyptian Arabic and Russian. We demonstrate that adding inductive bias through phonetic and visual priors on character mappings substantially improves the model{'}s performance on both languages, yielding results much closer to the supervised skyline. Finally, we introduce a new dataset of romanized Russian, collected from a Russian social network website and partially annotated for our experiments.",
   arxiv={2005.02517},
   slides={ryskina2020phonetic_slides.pdf},
-  code={https://github.com/ryskina/romanization-decipherment},
+  code_and_data={https://github.com/ryskina/romanization-decipherment},
   talk={https://slideslive.com/38929400/phonetic-and-visual-priors-for-decipherment-of-informal-romanization},
   selected={true},
   bibtex_show={true},
