--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,27 +2,41 @@
 ---
 
 @article{arkhangorodsky-2021-selfplay,
-    abbr={arXiv},
-    title = {Two Approaches to Building Collaborative, Task-Oriented Dialog Agents through Self-Play},
-    author = {Arkady Arkhangorodsky and Scot Fang and Victoria Knight and Ajay Nagesh and Maria Ryskina and Kevin Knight},
-    journal = {arXiv preprint,},
-    year={2021},
-    abstract="Task-oriented dialog systems are often trained on human/human dialogs, such as collected from Wizard-of-Oz interfaces. However, human/human corpora are frequently too small for supervised training to be effective. This paper investigates two approaches to training agent-bots and user-bots through self-play, in which they autonomously explore an API environment, discovering communication strategies that enable them to solve the task. We give empirical results for both reinforcement learning and game-theoretic equilibrium finding.",
-    arxiv="2109.09597"
+  abbr={arXiv},
+  title = {Two Approaches to Building Collaborative, Task-Oriented Dialog Agents through Self-Play},
+  author = {Arkady Arkhangorodsky and Scot Fang and Victoria Knight and Ajay Nagesh and Maria Ryskina and Kevin Knight},
+  journal = {arXiv preprint,},
+  year={2021},
+  abstract="Task-oriented dialog systems are often trained on human/human dialogs, such as collected from Wizard-of-Oz interfaces. However, human/human corpora are frequently too small for supervised training to be effective. This paper investigates two approaches to training agent-bots and user-bots through self-play, in which they autonomously explore an API environment, discovering communication strategies that enable them to solve the task. We give empirical results for both reinforcement learning and game-theoretic equilibrium finding.",
+  arxiv="2109.09597"
 }
 
 @inproceedings{ryskina-knight-2021-learning,
-    abbr={BlackboxNLP},
-    title = "Learning Mathematical Properties of Integers",
-    author = "Ryskina, Maria and
-            Knight, Kevin",
-    booktitle = "Proceedings of the Fourth BlackboxNLP Workshop on Analyzing and Interpreting Neural Networks for NLP",
-    month = nov,
-    year = "2021",
-    abstract = "Embedding words in high-dimensional vector spaces has proven valuable in many natural language applications. In this work, we investigate whether similarly-trained embeddings of integers can capture concepts that are useful for mathematical applications. We probe the integer embeddings for mathematical knowledge, apply them to a set of numerical reasoning tasks, and show that by learning the representations from mathematical sequence data, we can substantially improve over number embeddings learned from English text corpora.",
-    arxiv = "2109.07230",
-    selected={true},
-    data = "https://github.com/ryskina/integer-embedding-tests"
+  abbr={BlackboxNLP},
+  title = "Learning Mathematical Properties of Integers",
+  author = "Ryskina, Maria and
+          Knight, Kevin",
+  booktitle = "Proceedings of the Fourth BlackboxNLP Workshop on Analyzing and Interpreting Neural Networks for NLP",
+  month = nov,
+  year = "2021",
+  abstract = "Embedding words in high-dimensional vector spaces has proven valuable in many natural language applications. In this work, we investigate whether similarly-trained embeddings of integers can capture concepts that are useful for mathematical applications. We probe the integer embeddings for mathematical knowledge, apply them to a set of numerical reasoning tasks, and show that by learning the representations from mathematical sequence data, we can substantially improve over number embeddings learned from English text corpora.",
+  arxiv = "2109.07230",
+  selected={true},
+  data = "https://github.com/ryskina/integer-embedding-tests",
+  poster={Ryskina-Knight-2021-integers-poster.pdf},
+  bibtex_show={true},
+  bibtex ={@inproceedings\{ryskina-knight-2021-learning,
+  title = "Learning Mathematical Properties of Integers",
+  author = "Ryskina, Maria  and
+    Knight, Kevin",
+  booktitle = "Proceedings of the Fourth BlackboxNLP Workshop on Analyzing and Interpreting Neural Networks for NLP",
+  month = nov,
+  year = "2021",
+  address = "Punta Cana, Dominican Republic",
+  publisher = "Association for Computational Linguistics",
+  url = "https://aclanthology.org/2021.blackboxnlp-1.30",
+  pages = "389--395",
+\}}
 }
 
 @inproceedings{pimentel-ryskina-etal-2021-sigmorphon,
@@ -178,7 +192,7 @@
   publisher = "Association for Computational Linguistics",
   abstract = "Traditionally, character-level transduction problems have been solved with finite-state models designed to encode structural and linguistic knowledge of the underlying process, whereas recent approaches rely on the power and flexibility of sequence-to-sequence models with attention. Focusing on the less explored unsupervised learning scenario, we compare the two model classes side by side and find that they tend to make different types of errors even when achieving comparable performance. We analyze the distributions of different error classes using two unsupervised tasks as testbeds: converting informally romanized text into the native script of its language (for Russian, Arabic, and Kannada) and translating between a pair of closely related languages (Serbian and Bosnian). Finally, we investigate how combining finite-state and sequence-to-sequence models at decoding time affects the output quantitatively and qualitatively.",
   arxiv = "2106.12698",
-  slides={ryskina2021comparative_slides.pdf},
+  slides={Ryskina-etal-2021-error-analysis-slides.pdf},
   talk={https://youtu.be/ijwOF0fpqMs},
   bibtex_show={true},
   bibtex={@inproceedings\{ryskina-etal-2021-comparative,
@@ -249,7 +263,7 @@
   pages = "8308--8319",
   abstract = "Informal romanization is an idiosyncratic process used by humans in informal digital communication to encode non-Latin script languages into Latin character sets found on common keyboards. Character substitution choices differ between users but have been shown to be governed by the same main principles observed across a variety of languages{---}namely, character pairs are often associated through phonetic or visual similarity. We propose a noisy-channel WFST cascade model for deciphering the original non-Latin script from observed romanized text in an unsupervised fashion. We train our model directly on romanized data from two languages: Egyptian Arabic and Russian. We demonstrate that adding inductive bias through phonetic and visual priors on character mappings substantially improves the model{'}s performance on both languages, yielding results much closer to the supervised skyline. Finally, we introduce a new dataset of romanized Russian, collected from a Russian social network website and partially annotated for our experiments.",
   arxiv={2005.02517},
-  slides={ryskina2020phonetic_slides.pdf},
+  slides={Ryskina-etal-2020-romanization-slides.pdf},
   code_and_data={https://github.com/ryskina/romanization-decipherment},
   talk={https://slideslive.com/38929400/phonetic-and-visual-priors-for-decipherment-of-informal-romanization},
   selected={true},
@@ -283,7 +297,7 @@
   year = "2020",
   abstract = "We perform statistical analysis of the phenomenon of neology, the process by which new words emerge in a language, using large diachronic corpora of English. We investigate the importance of two factors, semantic sparsity and frequency growth rates of semantic neighbors, formalized in the distributional semantics paradigm. We show that both factors are predictive of word emergence although we find more support for the latter hypothesis. Besides presenting a new linguistic application of distributional semantics, this study tackles the linguistic question of the role of language-internal factors (in our case, sparsity) in language change motivated by language-external factors (reflected in frequency growth).",
   arxiv={2001.07740},
-  poster={ryskina2020where_poster.pdf},
+  poster={Ryskina-etal-2020-neology-poster.pdf},
   code={https://github.com/ryskina/neology},
   selected={true},
   bibtex_show={true},
