--- a/_news/2022-02-08-mcqll.md
+++ b/_news/2022-02-08-mcqll.md
@@ -4,5 +4,5 @@ date: 2022-02-08 07:59:00-0400
 inline: true
 ---
 
-I am presenting my research on modeling non-standard language at [MCQLL @ McGill University](https://mcqll.org/).
+I presented my research on modeling non-standard language at [MCQLL @ McGill University](https://mcqll.org/). Slides are available [here](assets/pdf/Ryskina-MCQLL-slides.pdf).
 
