Classes and talks are now collections

--- a/_posts/2021-08-28-name.md
+++ b/_posts/2021-08-28-name.md
@@ -18,11 +18,11 @@ I use this spelling only for legal purposes.  The extra ‘i’ is an artifact o
 ### pronunciation
 
 When speaking English, I often use an anglicized pronunciation of my name:
-- IPA transcription: <span style="font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';">/məˈɹiə ɹɪˈskinə/</span>
+- IPA transcription [(listen)](http://ipa-reader.xyz/?text=m%C9%99%CB%88%C9%B9i%C9%99%20%C9%B9%C9%AA%CB%88skin%C9%99&voice=Kendra): <span style="font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';">/məˈɹiə ɹɪˈskinə/</span>
 - Rough phonetic rendering: Ma-**ri**-a Ry-**ski**-na
 
 The Russian pronunciation is:  
-- IPA transcription: <span style="font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';">/mɐˈrʲijə ˈrɨskʲɪnə/</span>  
+- IPA transcription [(listen)](http://ipa-reader.xyz/?text=m%C9%90%CB%88r%CA%B2ij%C9%99%20%CB%88r%C9%A8sk%CA%B2%C9%AAn%C9%99&voice=Maxim): <span style="font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';">/mɐˈrʲijə ˈrɨskʲɪnə/</span> 
 - Rough phonetic rendering: Ma-**ri**-ya **Ry**-ski-na
 
 The stress in my last name originally falls on the first syllable, but in English I accept the pronunciations stressing the second syllable as well.
