--- a/_news/2022-02-21-clunch.md
+++ b/_news/2022-02-21-clunch.md
@@ -4,5 +4,5 @@ date: 2022-02-21 07:59:00-0400
 inline: true
 ---
 
-I am giving a talk about my work on non-standard language at the [CLunch seminar @ University of Pennsylvania](https://nlp.cis.upenn.edu/clunch.html). 
+I gave a talk about my work on non-standard language at the [CLunch seminar @ University of Pennsylvania](https://nlp.cis.upenn.edu/clunch.html). You can find the slides [here](assets/pdf/Ryskina-CLunch-slides.pdf).
 
