--- a/_talks/2022-02-08-mcqll.md
+++ b/_talks/2022-02-08-mcqll.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2022-02-08 07:59:00-0400
 title: Learning Computational Models of Non-Standard Language
-venue: MCQLL lab meeting, McGill University
+venue: MCQLL lab, McGill University
 slides: Ryskina-MCQLL-slides.pdf
 ---
 
