--- a/_talks/2022-02-25-evlab.md
+++ b/_talks/2022-02-25-evlab.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2022-02-25 07:59:00-0400
 title: Learning Computational Models of Non-Standard Language
-venue: EvLab meeting, MIT
+venue: EvLab, MIT
 slides: Ryskina-EvLab-slides.pdf
 ---
 
