--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,23 @@
 ---
 ---
 
+@inproceedings{unimorph-2022,
+  abbr={LREC},
+  title = {UniMorph 4.0: Universal Morphology},
+  author = {Khuyagbaatar Batsuren and Omer Goldman and others and others and others and Maria Ryskina and others and others and others and others and  Ekaterina Vylomova},
+  booktitle = {Proceedings of the 13th Language Resources and Evaluation Conference},
+  year={2022},
+  equal_contribution=2,
+  abstract="The Universal Morphology (UniMorph) project is a collaborative effort providing broad-coverage instantiated normalized morphological inflection tables for hundreds of diverse world languages. The project comprises two major thrusts: a language-independent feature schema for rich morphological annotation and a type-level resource of annotated data in diverse languages realizing that schema. This paper presents the expansions and improvements made on several fronts over the last couple of years (since McCarthy et al. (2020)). Collaborative efforts by numerous linguists have added 67 new languages, including 30 endangered languages. We have implemented several improvements to the extraction pipeline to tackle some issues, e.g. missing gender and macron information. We have also amended the schema to use a hierarchical structure that is needed for morphological phenomena like multiple-argument agreement and case stacking, while adding some missing morphological features to make the schema more inclusive. In light of the last UniMorph release, we also augmented the database with morpheme segmentation for 16 languages. Lastly, this new release makes a push towards inclusion of derivational morphology in UniMorph by enriching the data and annotation schema with instances representing derivational processes from MorphyNet.",
+  arxiv="2205.03608",
+  data="https://github.com/unimorph"
+}
+
 @article{arkhangorodsky-2021-selfplay,
   abbr={arXiv},
   title = {Two Approaches to Building Collaborative, Task-Oriented Dialog Agents through Self-Play},
   author = {Arkady Arkhangorodsky and Scot Fang and Victoria Knight and Ajay Nagesh and Maria Ryskina and Kevin Knight},
-  journal = {arXiv preprint,},
+  journal = {arXiv preprint},
   year={2021},
   abstract="Task-oriented dialog systems are often trained on human/human dialogs, such as collected from Wizard-of-Oz interfaces. However, human/human corpora are frequently too small for supervised training to be effective. This paper investigates two approaches to training agent-bots and user-bots through self-play, in which they autonomously explore an API environment, discovering communication strategies that enable them to solve the task. We give empirical results for both reinforcement learning and game-theoretic equilibrium finding.",
   arxiv="2109.09597"
