--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,58 @@
 ---
 ---
 
+@article{hupkes2022taxonomy,
+  abbr={arXiv},
+  title={State-of-the-art generalisation research in NLP: a taxonomy and review},
+  author = {Dieuwke Hupkes and Mario Giulianelli and Verna Dankers and Mikel Artetxe and
+          Yanai Elazar and Tiago Pimentel and Christos Christodoulopoulos and Karim Lasri and
+          Naomi Saphra and Arabella Sinclair and Dennis Ulmer and Florian Schottmann and
+          Khuyagbaatar Batsuren and Kaiser Sun and Koustuv Sinha and Leila Khalatbari and
+          Maria Ryskina and Rita Frieske and Ryan Cotterell and Zhijing Jin},
+  year={2022},
+  journal = {arXiv preprint},
+  arxiv="2210.03050",
+  abstract="The ability to generalise well is one of the primary desiderata of natural language processing (NLP). Yet, what `good generalisation' entails and how it should be evaluated is not well understood, nor are there any common standards to evaluate it. In this paper, we aim to lay the ground-work to improve both of these issues. We present a taxonomy for characterising and understanding generalisation research in NLP, we use that taxonomy to present a comprehensive map of published generalisation studies, and we make recommendations for which areas might deserve attention in the future. Our taxonomy is based on an extensive literature review of generalisation research, and contains five axes along which studies can differ: their main motivation, the type of generalisation they aim to solve, the type of data shift they consider, the source by which this data shift is obtained, and the locus of the shift within the modelling pipeline. We use our taxonomy to classify over 400 previous papers that test generalisation, for a total of more than 600 individual experiments. Considering the results of this review, we present an in-depth analysis of the current state of generalisation research in NLP, and make recommendations for the future. Along with this paper, we release a webpage where the results of our review can be dynamically explored, and which we intend to up-date as new NLP generalisation studies are published. With this work, we aim to make steps towards making state-of-the-art generalisation testing the new status quo in NLP.",
+  website={https://genbench.org/},
+  bibtex_show={true},
+  bibtex={@article\{hupkes2022taxonomy,
+  title = "State-of-the-art generalisation research in \{NLP\}: a taxonomy and review",
+  author = "Dieuwke Hupkes  and 
+    Mario Giulianelli  and 
+    Verna Dankers  and 
+    Mikel Artetxe  and
+    Yanai Elazar  and 
+    Tiago Pimentel  and 
+    Christos Christodoulopoulos  and 
+    Karim Lasri  and
+    Naomi Saphra  and 
+    Arabella Sinclair  and 
+    Dennis Ulmer  and 
+    Florian Schottmann  and
+    Khuyagbaatar Batsuren  and 
+    Kaiser Sun  and 
+    Koustuv Sinha  and 
+    Leila Khalatbari  and
+    Maria Ryskina  and 
+    Rita Frieske  and 
+    Ryan Cotterell  and 
+    Zhijing Jin",
+  journal = "CoRR",
+  year = "2022",
+  url = "https://arxiv.org/abs/2210.03050",
+\}}
+}
+
+@phdthesis{ryskina-2022-thesis,
+  abbr={Ph.D.},
+  title = {Learning Computational Models of Non-Standard Language},
+  author = {Maria Ryskina},
+  school = {Carnegie Mellon University},
+  year={2022},
+  abstract = "Non-standard language such as novel words or creative spellings of existing ones often occurs in natural text corpora, posing significant challenges for natural language processing (NLP) models. While humans can successfully infer the meaning communicated in such non-standard ways, NLP models largely discard linguistic innovation as noise, ignoring its fundamentally non-random nature and losing valuable context. In this thesis, we focus on computational modeling of such creative phenomena, aiming to both improve the automatic processing of non-standardized text data and to learn more about the linguistic and cognitive factors that allow humans to produce and understand novel linguistic items. We present empirical studies of several phenomena under the umbrella of non-standard language, characterized in terms of different linguistic units (orthographic, morphological, or lexical) and considered at different levels of granularity (from individual users to entire dialects or languages). First, we show how idiosyncratic spelling preferences reveal information about the user, with an application to the bibliographic task of identifying typesetters of historical printed documents. Second, we discuss the common patterns in user-specific orthographies and demonstrate that incorporating these patterns helps with unsupervised conversion of idiosyncratically romanized text into the language's native orthography. Third, we consider word emergence in a dialect or language as a whole and, in two diachronic corpora studies, model the language-internal and language-external factors that drive it. Finally, we look at how continuous emergence of novel words is reconciled with the existing system of morphological rules, focusing on generalization to unseen lemmas in morphological inflection in several languages.",
+  pdf="https://www.lti.cs.cmu.edu/sites/default/files/ryskina%2C%20maria%20-%20CMU-LTI-22-019.pdf"
+}
+
 @inproceedings{unimorph-2022,
   abbr={LREC},
   title = {UniMorph 4.0: Universal Morphology},
@@ -10,7 +62,46 @@
   equal_contribution=2,
   abstract="The Universal Morphology (UniMorph) project is a collaborative effort providing broad-coverage instantiated normalized morphological inflection tables for hundreds of diverse world languages. The project comprises two major thrusts: a language-independent feature schema for rich morphological annotation and a type-level resource of annotated data in diverse languages realizing that schema. This paper presents the expansions and improvements made on several fronts over the last couple of years (since McCarthy et al. (2020)). Collaborative efforts by numerous linguists have added 67 new languages, including 30 endangered languages. We have implemented several improvements to the extraction pipeline to tackle some issues, e.g. missing gender and macron information. We have also amended the schema to use a hierarchical structure that is needed for morphological phenomena like multiple-argument agreement and case stacking, while adding some missing morphological features to make the schema more inclusive. In light of the last UniMorph release, we also augmented the database with morpheme segmentation for 16 languages. Lastly, this new release makes a push towards inclusion of derivational morphology in UniMorph by enriching the data and annotation schema with instances representing derivational processes from MorphyNet.",
   arxiv="2205.03608",
-  data="https://github.com/unimorph"
+  data="https://github.com/unimorph",
+  bibtex_show={true},
+  bibtex={@inproceedings\{batsuren-etal-2022-unimorph,
+    title = "\{U\}ni\{M\}orph 4.0: \{U\}niversal \{M\}orphology",
+    author = "Batsuren, Khuyagbaatar  and Goldman, Omer  and Khalifa, Salam  and
+      Habash, Nizar  and Kiera{\'s}, Witold  and Bella, G{\'a}bor  and
+      Leonard, Brian  and Nicolai, Garrett  and Gorman, Kyle  and
+      Ate, Yustinus Ghanggo  and Ryskina, Maria  and Mielke, Sabrina  and
+      Budianskaya, Elena  and El-Khaissi, Charbel  and Pimentel, Tiago  and
+      Gasser, Michael  and Lane, William Abbott  and Raj, Mohit  and Coler, Matt  and 
+      Samame, Jaime Rafael Montoya  and Camaiteri, Delio Siticonatzi  and 
+      Rojas, Esa{\'u} Zumaeta  and L{\'o}pez Francis, Didier  and Oncevay, Arturo  and
+      L{\'o}pez Bautista, Juan  and Villegas, Gema Celeste Silva  and Hennigen, Lucas Torroba  and
+      Ek, Adam  and Guriel, David  and Dirix, Peter  and Bernardy, Jean-Philippe  and 
+      Scherbakov, Andrey and Bayyr-ool, Aziyana  and Anastasopoulos, Antonios  and
+      Zariquiey, Roberto  and Sheifer, Karina  and Ganieva, Sofya  and Cruz, Hilaria  and
+      Karah{\'o}{\v{g}}a, Ritv{\'a}n  and Markantonatou, Stella  and Pavlidis, George  and
+      Plugaryov, Matvey  and Klyachko, Elena  and Salehi, Ali  and Angulo, Candy  and
+      Baxi, Jatayu  and Krizhanovsky, Andrew  and Krizhanovskaya, Natalia  and
+      Salesky, Elizabeth  and Vania, Clara  and Ivanova, Sardana  and
+      Valvoda, Josef  and Zmigrod, Ran   and Czarnowska, Paula  and
+      Nikkarinen, Irene  and Salchak, Aelita  and Bhatt, Brijesh  and
+      Straughn, Christopher  and Liu, Zoey  and Washington, Jonathan North  and
+      Pinter, Yuval  and Ataman, Duygu  and Wolinski, Marcin  and Suhardijanto, Totok  and
+      Yablonskaya, Anna  and Stoehr, Niklas  and Dolatian, Hossep  and Nuriah, Zahroh  and
+      Ratan, Shyam  and Tyers, Francis M.  and Ponti, Edoardo M.  and Aiton, Grant  and
+      Arora, Aryaman  and Hatcher, Richard J.  and Kumar, Ritesh  and Young, Jeremiah  and
+      Rodionova, Daria  and Yemelina, Anastasia  and Andrushko, Taras  and Marchenko, Igor  and
+      Mashkovtseva, Polina  and Serova, Alexandra  and Prud{'}hommeaux, Emily  and
+      Nepomniashchaya, Maria  and Giunchiglia, Fausto  and Chodroff, Eleanor  and
+      Hulden, Mans  and Silfverberg, Miikka  and McCarthy, Arya D.  and Yarowsky, David  and
+      Cotterell, Ryan  and Tsarfaty, Reut  and Vylomova, Ekaterina",
+    booktitle = "Proceedings of the Thirteenth Language Resources and Evaluation Conference",
+    month = jun,
+    year = "2022",
+    address = "Marseille, France",
+    publisher = "European Language Resources Association",
+    url = "https://aclanthology.org/2022.lrec-1.89",
+    pages = "840--855",
+\}}
 }
 
 @article{arkhangorodsky-2021-selfplay,
